--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "start:dev": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
@@ -17,7 +18,8 @@
     "express": "^4.17.1",
     "i": "^0.3.7",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.29"
+    "mongoose": "^5.9.29",
+    "nodemon":"^2.0.6"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
