--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 CONNECTION_URL = "mongodb+srv://abcd:abcd@cluster0.727i3.mongodb.net/MERN?retryWrites=true&w=majority"
-PORT= "5000" 
+PORT= "5000"
+JWT_KEY = GAURAVmandalljsiohanlsjdnclwfijwfojwci 
